--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,9 @@
 
     <groupId>elasticsearch</groupId>
     <artifactId>demo</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-    
-    <dependencies>
-        <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>transport</artifactId>
-            <version>6.7.0</version>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>officialstudy-elasticsearch</module>
+    </modules>
 </project>
